--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "lite-server": "^2.5.4",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "pdfkit": "^0.11.0"
   }
 }
