--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.6",
-    "sucrase": "^3.16.0"
+    "sucrase": "^3.16.0",
+    "lite-server": "^2.5.4"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "lite-server": "^2.5.4",
     "multer": "^1.4.2",
     "pdfkit": "^0.11.0"
   }
